Alignmnet fixed

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -153,7 +153,7 @@ body {
 
 /* ---------------------------------------------------Hero SectionStyle --------------------------------------------------- */
 .hero-sec {
-  width: 1520px;
+  width: 1445px;
   background-image: url(../Images/homepage-banner.png);
   background-repeat: no-repeat;
   background-size: cover;
@@ -192,8 +192,8 @@ body {
 
 /* ---------------------------------------------------Menu --------------------------------------------------- */
 .menu img {
-  width: 120px;
-  margin: 0 0.8em;
+  width: 130px;
+  margin-right: 0.8em;
 }
 /* ---------------------------------------------------Menu Ends--------------------------------------------------- */
 
@@ -273,7 +273,7 @@ body {
 
 /* ---------------------------------------------------Deals of the week --------------------------------------------------- */
 .deals-pic {
-  margin-left: -10rem;
+  margin-left: -11rem;
 }
 /* --------------------------------------------------Deals of the week Ends--------------------------------------------------- */
 
